--- a/New_Quiz_App/templates/New_Quiz_App.html
+++ b/New_Quiz_App/templates/New_Quiz_App.html
@@ -46,10 +46,22 @@
             </div>
 
             <div class="answers-options-frame">
-                <input type="text" class="answers-options-frame-blue" placeholder="Answer 1">
-                <input type="text" class="answers-options-frame-green" placeholder="Answer 2">
-                <input type="text" class="answers-options-frame-yellow" placeholder="Answer 3">
-                <input type="text" class="answers-options-frame-red" placeholder="Answer 4">
+                <div class="answer-container">
+                    <input type="text" class="answers-options-frame-blue" placeholder="Answer 1">
+                    <input type="checkbox" class="answer-checkbox">
+                </div>
+                <div class="answer-container">
+                    <input type="text" class="answers-options-frame-green" placeholder="Answer 2">
+                    <input type="checkbox" class="answer-checkbox">
+                </div>
+                <div class="answer-container">
+                    <input type="text" class="answers-options-frame-yellow" placeholder="Answer 3">
+                    <input type="checkbox" class="answer-checkbox">
+                </div>
+                <div class="answer-container">
+                    <input type="text" class="answers-options-frame-red" placeholder="Answer 4">
+                    <input type="checkbox" class="answer-checkbox">
+                </div>
             </div>
         </div>
     </div>
