two pages design

--- a/history/templates/history.html
+++ b/history/templates/history.html
@@ -13,10 +13,10 @@
             <var class="title-var">Complete Quizzes</var>
         </div>
         <div class="div-content">
-            <div class="quiz-frame">
-                <img class="quiz-img"></img>
-                <div class="quiz_correct-frame"></div>
-                <var class="quiz-var"></var>
+            <div class="quiz-frame-1">
+                <img class="quiz-img-1"></img>
+                <div class="quiz_correct-frame-1"></div>
+                <var class="quiz-var-1"></var>
             </div>
         </div>
     </div>
