third page design

--- a/history/templates/quiz_teacher_result.html
+++ b/history/templates/quiz_teacher_result.html
@@ -11,8 +11,34 @@
     <div class="section">
         <var class="quiz-text">Quiz: Вікторина</var>
         <div class="result-frame">
-            <div class="student-info"></div>
-            <div class="correct-answers"></div>
+            <div class="students-info">
+                <div class="student-name-accuracy">
+                    <div class="name">
+                        <var class="name-text">name</var>
+                    </div>
+                    <div class="accuracy">
+                        <var class="accuracy-text">Accuracy</var>
+                    </div>
+                </div>
+                <div class="student-quiz-info-1">
+                    <div class="quiz-student-name-1">
+                        <var class="quiz-student-name-text-1">Mykola</var>
+                    </div>
+                    <div class="quiz-student-accuracy-1">
+                        <var class="quiz-student-accuracy-text-1">Accuracy</var>
+                    </div>
+                </div>
+            </div>
+            <div class="accuracy-info">
+                <div class="question-accuracy-1">
+                    <var class="question-number-1">Q1</var>
+                    <div class="questions-accuracy-1">
+                        <img class="question-state-1"></img>
+                        <img class="question-state-2"></img>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 {% endblock %}
