--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -29,11 +29,11 @@
                             <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
                         </div>
                         <div class="account-a">
-                            <a class="username-a text-decoration" href="/profile">Username</a>
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
                             <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
                         </div>
                     </div>
-                {% elif page == 'profile' and is_auth == True %}
+                {% elif page == 'profile' %}
                     <div class="urls">
                         <div class="quiz-history-div">
                             <a class="history-a text-decoration" href="/history">Quiz History</a>
