--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -31,13 +31,12 @@
         </div>
         <div class="choose-choose">
             <div>
-                <input type="radio" value='0' id="Student" name="Teacher" class="choose-btn" checked>
-                <label for="Student" class="label">Student</label>
-
+                <input type="radio" id="Student" name="Teacher" class="choose-btn" checked>
+                <label for="Student" class="label"> Student</label>
             </div>
             <div>
-                <input type="radio" value="1" id="Teacher" name="Teacher" class="choose-btn">
-                <label for="Teacher" class="label">Teacher</label>
+                <input type="radio" id="Teacher" name="Teacher" class="choose-btn">
+                <label for="Teacher" class="label"> Teacher</label>
             </div>
         </div>
             
@@ -45,5 +44,4 @@
         <button type="submit" class="submit-btn">Submit</button>
     </form>
 </div>
-
 {% endblock %}
