commit before merge origin/artem

--- a/history/templates/history.html
+++ b/history/templates/history.html
@@ -14,7 +14,7 @@
         </div>
         <div class="div-content">
             <div class="quiz-frame-1">
-                <img class="quiz-img-1"></img>
+                <img class="quiz-img-1">
                 <div class="quiz_correct-frame-1"></div>
                 <var class="quiz-var-1"></var>
             </div>
