--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -41,7 +41,7 @@
                             <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
                         </div>
                         <div class="account-a">
-                            <a class="username-a text-decoration" href="/profile">Username</a>
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
                             <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                             <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
                         </div>
                         <div class="account-a">
-                            <a class="username-a text-decoration" href="/profile">Username</a>
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
                             <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                             <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
                         </div>
                         <div class="account-a">
-                            <a class="username-a text-decoration" href="/profile">Username</a>
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
                             <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                             <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
                         </div>
                         <div class="account-a">
-                            <a class="username-a text-decoration" href="/profile">Username</a>
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
                             <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
                         </div>
                         <div class="account-a">
-                            <a class="username-a text-decoration" href="/profile">Username</a>
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
                             <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
                         </div>
                     </div>
