--- a/New_Quiz_App/templates/New_Quiz_Settings.html
+++ b/New_Quiz_App/templates/New_Quiz_Settings.html
@@ -14,7 +14,7 @@
     <div class="div-content">
         <div class="quiz-settings-content">
             <h1>Quiz Setting</h1>
-            <form class="quiz-form" method="POST" enctype="multipart/form-data">
+            <form class="quiz-form" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="quiz-name">Name of quiz</label>
                     <input type="text" id="quiz-name" name="quiz-name" required>
