--- a/New_Quiz_App/static/css/New_Quiz_App.css
+++ b/New_Quiz_App/static/css/New_Quiz_App.css
@@ -280,6 +280,7 @@ img {
     padding: 5px 10px;
     color: rgba(0, 0, 0, 0.5);
     margin-left: 55px;
+    cursor: pointer;
 }
 
 .modal-overlay {
@@ -332,6 +333,7 @@ img {
     font-size: 28px;
     font-family: "Quicksand", sans-serif;
     color: black;
+    background-color: #EDEDED;
     font-weight: 500;
     text-align: center;
 }
@@ -346,6 +348,7 @@ img {
     font-size: 20px;
     font-family: 'Quicksand', sans-serif;
     color: rgba(0, 0, 0, 0.5);
+    outline: none;
 }
 
 .modal-content .submit-ai-promt-btn {
