--- a/history/templates/quiz_student_result.html
+++ b/history/templates/quiz_student_result.html
@@ -6,7 +6,6 @@
 
 {% block main %} 
  <!-- Design -->
-    <header></header>
     <div class="section">
         <var class="quiz-text">Quiz: Вікторина</var>
         <div class="result-frame">
@@ -41,27 +40,86 @@
                 </div>
                 <div class="answer-info-2">
                     <div class="question-frame-2">
-                        <var class="question-2"></var>
+                        <var class="question-2">Вкажіть назву обов'язкової властивісті у будь якій моделі бази даних?</var>
                     </div>
                     <div class="correct-answer-frame-2">
                         <div class="correct-answer-info-2">
                             <var class="answer-2">Відповідь</var>
                             <div class="all-answers">
                                 <div class="answer-choice-1">
-                                    <img class="img-answer-choice-1"></img>
+                                    <div class="frame-img-answer-choice-1">
+                                        <img class="img-answer-choice-1"></img>
+                                    </div>
                                     <var class="text-answer-choice-1">11</var>
                                 </div>
                                 <div class="answer-choice-2">
-                                    <img class="img-answer-choice-2"></img>
-                                    <var class="text-answer-choice-2">22</var>
+                                    <div class="frame-img-answer-choice-2">
+                                        <img class="img-answer-choice-2"></img>
+                                        <var class="text-answer-choice-2">22</var>
+                                    </div>
                                 </div>
                                 <div class="answer-choice-3">
-                                    <img class="img-answer-choice-3"></img>
-                                    <var class="text-answer-choice-3">33</var>
+                                    <div class="frame-img-answer-choice-3">
+                                        <img class="img-answer-choice-3"></img>
+                                        <var class="text-answer-choice-3">33</var>
+                                    </div>
                                 </div>
                                 <div class="answer-choice-4">
-                                    <img class="img-answer-choice-4"></img>
-                                    <var class="text-answer-choice-4">44</var>
+                                    <div class="frame-img-answer-choice-4">
+                                        <img class="img-answer-choice-4"></img>
+                                        <var class="text-answer-choice-4">44</var>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="all-answer-3">
+                <div class="answer-number-3">
+                    <var class="number-text-3">3</var>
+                </div>
+                <div class="answer-info-3">
+                    <div class="question-frame-3">
+                        <var class="question-3">Вкажіть назву обов'язкової властивісті у будь якій моделі бази даних?</var>
+                    </div>
+                    <div class="correct-answer-frame-3">
+                        <div class="correct-answer-info-3">
+                            <var class="answer-3">Відповідь:</var>
+                            <var class="correct-answer-3">ID</var>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="all-answer-4">
+                <div class="answer-number-4">
+                    <var class="number-text-4">4</var>
+                </div>
+                <div class="answer-info-4">
+                    <div class="question-frame-4">
+                        <p class="question-4">Вкажіть назву обов'язкової властивісті у будь якій моделі бази даних?</p>
+                    </div>
+                    <div class="correct-answer-frame-4">
+                        <div class="correct-answer-info-4">
+                            <p class="answer-4">Відповідь</p>
+                            <div class="all-answers-2">
+                                <div class="answer-choice-12">
+                                    <div class="frame-img-answer-choice-12">
+                                        <img class="img-answer-choice-12"></img>
+                                    </div>
+                                    <p class="text-answer-choice-12">11</p>
+                                </div>
+                                <div class="answer-choice-22">
+                                    <img class="img-answer-choice-22"></img>
+                                    <p class="text-answer-choice-22">22</p>
+                                </div>
+                                <div class="answer-choice-32">
+                                    <img class="img-answer-choice-32"></img>
+                                    <p class="text-answer-choice-32">33</p>
+                                </div>
+                                <div class="answer-choice-42">
+                                    <img class="img-answer-choice-42"></img>
+                                    <p class="text-answer-choice-42">44</p>
                                 </div>
                             </div>
                         </div>
