--- a/history/static/css/quiz_student_result.css
+++ b/history/static/css/quiz_student_result.css
@@ -7,17 +7,13 @@ main{
 .section{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    position: absolute;
-    height: 100%;
-    max-width: 800px;
+    width: 1420px;
+    max-height: 100%;
+    /* height: 800px; */
     align-items: center;
     justify-content: start;
-    border: none;
+    border: 1px solid;
     border-radius: 20px;
-    left: 35%;
-    top: 10%;
-    
 }
 
 .quiz-text{
@@ -41,7 +37,7 @@ main{
     gap: 60px;
     
     width: 799px;
-    height: 2052px;
+    height: 100%;
     
     background: #607C94;
     border: 1px solid #FFFFFF;
@@ -298,13 +294,13 @@ order: 1;
     margin: 25px;
     
     width: 627px;
-    height: 311px;
+    height: 405px;
     
     background: #FFFFFF;
     box-shadow: 1px 357px 143px rgba(0, 0, 0, 0.01), 0px 201px 121px rgba(0, 0, 0, 0.05), 0px 89px 89px rgba(0, 0, 0, 0.09), 0px 22px 49px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     
-    order: 1;
+    order: 2;
 }
 
 .answer-number-2{
@@ -316,7 +312,7 @@ order: 1;
     gap: 5px;
     
     width: 24px;
-    height: 311px;
+    height: 405px;
 
     border-radius: 15px 0px 0px 15px;
     
@@ -346,7 +342,7 @@ order: 1;
     border-radius: 15px;
     
     width: 603px;
-    height: 310px;
+    height: 405px;
 
     order: 1;
 }
@@ -361,7 +357,7 @@ order: 1;
     border-radius: 15px;
 
     width: 603px;
-    height: 155px;
+    height: 130px;
 
     align-self: stretch;
 
@@ -382,6 +378,359 @@ order: 1;
 }
 
 .correct-answer-frame-2{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 15px;
+gap: 10px;
+
+width: 603px;
+height: 250px;
+
+border-top: 2px solid #000000;
+
+order: 1;
+align-self: stretch;
+}
+
+.correct-answer-info-2{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    padding: 0px;
+    gap: 20px 5px;
+    
+    width: 344px;
+    height: 180px;
+
+    order: 1;
+}
+
+.answer-2{
+    width: 573px;
+    height: 30px;
+    
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+   
+    color: #000000;
+
+    align-self: stretch;
+}
+
+.all-answers{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: center;
+align-content: flex-start;
+padding: 0px;
+gap: 20px 5px;
+
+width: 344px;
+height: 180px;
+
+order: 1;
+}
+
+.answer-choice-1{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 54px;
+height: 30px;
+order: 1;
+}
+
+.frame-img-answer-choice-1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    gap: 5px;
+    
+    width: 34px;
+    height: 30px;
+
+    background: #00C985;
+    border-radius: 50px;
+}
+
+.img-answer-choice-1{
+width: 20px;
+height: 20px;
+align-items: center;
+
+background: #FFFFFF;
+}
+
+.text-answer-choice-1{
+width: 18px;
+height: 25px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
+}
+
+.answer-choice-2{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: center;
+align-content: flex-start;
+padding: 0px;
+gap: 20px 5px;
+
+width: 344px;
+height: 30px;
+
+order: 2;
+flex-grow: 0;
+}
+
+.frame-img-answer-choice-2{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 90px;
+height: 30px;
+}
+
+.img-answer-choice-2{
+width: 30px;
+height: 30px;
+
+background: #D9D9D9;
+border-radius: 50px;
+}
+
+.text-answer-choice-2{
+width: 55px;
+height: 25px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
+}
+
+.answer-choice-3{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    padding: 0px;
+    gap: 20px 5px;
+    
+    width: 344px;
+    height: 30px;
+
+    order: 3;    
+}
+
+.frame-img-answer-choice-3{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 124px;
+height: 30px;
+}
+
+.img-answer-choice-3{
+    width: 30px;
+    height: 30px;
+    
+    background: #D9D9D9;
+    border-radius: 50px;
+}
+
+.text-answer-choice-3{
+width: 89px;
+height: 25px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
+}
+
+.answer-choice-4{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    padding: 0px;
+    gap: 20px 5px;
+    
+    width: 344px;
+    height: 30px;
+
+    order: 4;    
+}
+
+.frame-img-answer-choice-4{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 112px;
+height: 30px;
+}
+
+.img-answer-choice-4{
+    width: 30px;
+    height: 30px;
+    
+    background: #D9D9D9;
+    border-radius: 50px;
+}
+
+.text-answer-choice-4{
+width: 77px;
+height: 25px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
+}
+
+
+.all-answer-3{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    padding: 0px;
+    row-gap: 0px;
+    margin: 25px;
+    
+    width: 627px;
+    height: 311px;
+    
+    background: #FFFFFF;
+    box-shadow: 1px 357px 143px rgba(0, 0, 0, 0.01), 0px 201px 121px rgba(0, 0, 0, 0.05), 0px 89px 89px rgba(0, 0, 0, 0.09), 0px 22px 49px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    
+    order: 3;
+}
+
+.answer-number-3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 5px;
+    gap: 5px;
+    
+    width: 24px;
+    height: 311px;
+
+    border-radius: 15px 0px 0px 15px;
+    
+    background: #EF3C69;
+}
+
+.number-text-3{
+    width: 10px;
+    height: 30px;
+    
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+
+    color: #FFFFFF;
+    background: #EF3C69;
+}
+
+.answer-info-3{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    border-radius: 15px;
+    
+    width: 603px;
+    height: 310px;
+
+    order: 1;
+}
+
+.question-frame-3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 53px;
+
+    border-radius: 15px;
+
+    width: 603px;
+    height: 155px;
+
+    align-self: stretch;
+
+}
+
+.question-3{
+    width: 497px;
+    height: 90px;
+    
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    
+    color: #000000;
+}
+
+.correct-answer-frame-3{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -400,7 +749,7 @@ order: 1;
     align-self: stretch;
 }
 
-.correct-answer-info-2{
+.correct-answer-info-3{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -413,7 +762,161 @@ order: 1;
 
 }
 
-.ansewr-2{
+.answer-3{
+    width: 130px;
+    height: 30px;
+
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+
+    color: #000000;
+}
+
+.correct-answer-3{
+width: 21px;
+height: 30px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 30px;
+
+color: #000000;
+
+order: 1;
+
+}
+
+.all-answer-4{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    padding: 0px;
+    row-gap: 0px;
+    margin: 25px;
+    
+    width: 627px;
+    height: 405px;
+    
+    background: #FFFFFF;
+    box-shadow: 1px 357px 143px rgba(0, 0, 0, 0.01), 0px 201px 121px rgba(0, 0, 0, 0.05), 0px 89px 89px rgba(0, 0, 0, 0.09), 0px 22px 49px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    
+    order: 2;
+}
+
+.answer-number-4{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 5px;
+    gap: 5px;
+    
+    width: 24px;
+    height: 405px;
+
+    border-radius: 15px 0px 0px 15px;
+    
+    background:#EF3C69;
+}
+
+.number-text-4{
+    width: 10px;
+    height: 30px;
+    
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+
+    color: #FFFFFF;
+    background: #EF3C69;
+}
+
+.answer-info-4{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    border-radius: 15px;
+    
+    width: 603px;
+    height: 405px;
+
+    order: 1;
+}
+
+.question-frame-4{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 53px;
+
+    border-radius: 15px;
+
+    width: 603px;
+    height: 130px;
+
+    align-self: stretch;
+
+}
+
+.question-4{
+    width: 497px;
+    height: 90px;
+    
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    
+    color: #000000;
+}
+
+.correct-answer-frame-4{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 15px;
+gap: 10px;
+
+width: 603px;
+height: 250px;
+
+border-top: 2px solid #000000;
+
+order: 1;
+align-self: stretch;
+}
+
+.correct-answer-info-4{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    padding: 0px;
+    gap: 20px 5px;
+    
+    width: 344px;
+    height: 180px;
+
+    order: 1;
+}
+
+.answer-4{
     width: 573px;
     height: 30px;
     
@@ -428,23 +931,22 @@ order: 1;
     align-self: stretch;
 }
 
-.all-answers{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-    
-    position: relative;
-    width: 1920px;
-    height: 2486px;
-    left: 2286px;
-    top: 100px;
-    
-    background: #FFFFFF;
+.all-answers-1{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: center;
+align-content: flex-start;
+padding: 0px;
+gap: 20px 5px;
+
+width: 344px;
+height: 180px;
+
+order: 1;
 }
 
-.answer-choice-1{
+.answer-choice-12{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -453,50 +955,33 @@ order: 1;
     
     width: 54px;
     height: 30px;
-}
-
-.img-answer-choice-1{
+    order: 1;
+    }
+    
+    .frame-img-answer-choice-12{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 0px;
+        gap: 5px;
+        
+        width: 34px;
+        height: 30px;
+    
+        background: #00C985;
+        border-radius: 50px;
+    }
+    
+    .img-answer-choice-12{
     width: 20px;
     height: 20px;
-}
-
-.text-answer-choice-1{
-    width: 60px;
-    height: 25px;
-    
-    font-family: 'Quicksand';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 25px;
-
-    color: #000000;
-
-    order: 1;
-}
-
-.answer-choice-2{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     align-items: center;
-    align-content: flex-start;
-    padding: 0px;
-    gap: 20px 5px;
     
-    width: 344px;
-    height: 30px;
-
-    order: 1;    
-}
-
-.img-answer-choice-2{
-    width: 20px;
-    height: 20px;
-}
-
-.text-answer-choice-2{
-    width: 60px;
+    background: #FFFFFF;
+    }
+    
+    .text-answer-choice-12{
+    width: 18px;
     height: 25px;
     
     font-family: 'Quicksand';
@@ -504,48 +989,63 @@ order: 1;
     font-weight: 700;
     font-size: 20px;
     line-height: 25px;
-
-    color: #000000;
-
-    order: 1;
-}
-
-.answer-choice-3{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    align-content: flex-start;
-    padding: 0px;
-    gap: 20px 5px;
     
-    width: 344px;
-    height: 30px;
-
-    order: 2;    
-}
-
-.img-answer-choice-3{
-    width: 20px;
-    height: 20px;
-}
-
-.text-answer-choice-3{
-    width: 60px;
-    height: 25px;
-    
-    font-family: 'Quicksand';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 25px;
-
     color: #000000;
-
+    
     order: 1;
+    }
+    
+.answer-choice-22{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+align-items: center;
+align-content: flex-start;
+padding: 0px;
+gap: 20px 5px;
+
+width: 344px;
+height: 30px;
+
+order: 2;
+flex-grow: 0;
 }
 
-.answer-choice-4{
+.frame-img-answer-choice-22{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 90px;
+height: 30px;
+}
+
+.img-answer-choice-22{
+width: 30px;
+height: 30px;
+
+background: #D9D9D9;
+border-radius: 50px;
+}
+
+.text-answer-choice-22{
+width: 55px;
+height: 25px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
+}
+
+.answer-choice-32{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -560,22 +1060,85 @@ order: 1;
     order: 3;    
 }
 
-.img-answer-choice-4{
-    width: 20px;
-    height: 20px;
+.frame-img-answer-choice-32{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 124px;
+height: 30px;
 }
 
-.text-answer-choice-1{
-    width: 60px;
-    height: 25px;
+.img-answer-choice-32{
+    width: 30px;
+    height: 30px;
     
-    font-family: 'Quicksand';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 25px;
+    background: #D9D9D9;
+    border-radius: 50px;
+}
 
-    color: #000000;
+.text-answer-choice-32{
+width: 89px;
+height: 25px;
 
-    order: 1;
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
+}
+
+.answer-choice-42{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: flex-start;
+    padding: 0px;
+    gap: 20px 5px;
+    
+    width: 344px;
+    height: 30px;
+
+    order: 4;    
+}
+
+.frame-img-answer-choice-42{
+display: flex;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+gap: 5px;
+
+width: 112px;
+height: 30px;
+}
+
+.img-answer-choice-42{
+    width: 30px;
+    height: 30px;
+    
+    background: #D9D9D9;
+    border-radius: 50px;
+}
+
+.text-answer-choice-42{
+width: 77px;
+height: 25px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 25px;
+
+color: #000000;
+
+order: 1;
 }
