--- a/history/templates/quiz_teacher_result.html
+++ b/history/templates/quiz_teacher_result.html
@@ -7,7 +7,6 @@
 
 {% block main %} 
  <!-- Design -->
-    <header></header>
     <div class="section">
         <var class="quiz-text">Quiz: Вікторина</var>
         <div class="result-frame">
@@ -33,11 +32,10 @@
                 <div class="question-accuracy-1">
                     <var class="question-number-1">Q1</var>
                     <div class="questions-accuracy-1">
-                        <img class="question-state-1"></img>
-                        <img class="question-state-2"></img>
+                        <img class="question-state-1" src = "static/img/done_circle.jpg"></img>
+                        <img class="question-state-2" src></img>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
