--- a/history/templates/history.html
+++ b/history/templates/history.html
@@ -8,13 +8,18 @@
  <!-- Design -->
     <div class="section">
         <div class="title-div">
-            <var class="title-var">Complete Quizzes</var>
+            <p class="title-var">Complete Quizzes</p>
         </div>
         <div class="div-content">
             <div class="quiz-frame-1">
-                <img class="quiz-img-1"></img>
-                <div class="quiz_correct-frame-1"></div>
-                <var class="quiz-var-1"></var>
+                <img class="quiz-img-1" src="{{ url_for('history.static', filename='img/math_quiz.jpg') }}">
+                <div class="quiz_correct-frame-1">Accuracy 0%</div>
+                <p class="quiz-var-1">Вікторина з математики</p>
+            </div>
+            <div class="quiz-frame-2">
+                <img class="quiz-img-2" src="{{ url_for('history.static', filename='img/english_quiz.jpg') }}">
+                <div class="quiz_correct-frame-2">Accuracy 100%</div>
+                <p class="quiz-var-2">Вікторина з англійської</p>
             </div>
         </div>
     </div>
