--- a/history/static/css/history.css
+++ b/history/static/css/history.css
@@ -7,17 +7,13 @@ main{
 .section{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    max-width: 1420px;
-    height: 800px;
+    width: 1420px;
+    max-height: 100%;
+    /* height: 800px; */
     align-items: center;
     justify-content: start;
     border: 1px solid;
     border-radius: 20px;
-    left: 12.5%;
-    top: 10%;
 }
 .title-div{
     display: flex;
@@ -92,20 +88,80 @@ main{
     border-radius: 50px;
 
     order: 2;
+    background: #EF3C69;
 }
 
 .quiz-var-1{
-    width: 260px;
-    height: 33px;
+width: 260px;
+height: 33px;
 
-    font-family: 'Quicksand';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 20px;
+text-align: center;
 
-    color: #000000;
+color: #000000;
 
-    order: 1;
+order: 1;
+
+background: #FFFFFF;
+
+}
+
+.quiz-frame-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+
+    width: 270px;
+    height: 250px;
+
+    background: #FFFFFF;
+    box-shadow: 0px 119px 48px rgba(0, 0, 0, 0.01), 0px 67px 40px rgba(0, 0, 0, 0.05), 0px 30px 30px rgba(0, 0, 0, 0.09), 0px 7px 16px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+.quiz-img-2{
+    width: 270px;
+    height: 185px;
+    align-self: stretch;
+}
+
+.quiz_correct-frame-2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    isolation: isolate;
+    
+    width: 233px;
+    height: 20px;
+    
+    border-radius: 50px;
+
+    order: 2;
+    background: #00C985;
+}
+
+.quiz-var-2{
+width: 260px;
+height: 33px;
+
+font-family: 'Quicksand';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 20px;
+text-align: center;
+
+color: #000000;
+
+order: 1;
+
+background: #FFFFFF;
+
 }
