--- a/New_Quiz_App/templates/New_Quiz_Settings.html
+++ b/New_Quiz_App/templates/New_Quiz_Settings.html
@@ -51,7 +51,7 @@
             <h1>Preview</h1>
             <div class="image-preview">
                 <img class="quiz-image-preview" src="{{ url_for('New_Quiz.static', filename='img/quiz-image-preview.png') }}" alt="quiz-image-preview">
-                <h2>Вікторина з програмування</h2>
+                <h2 id="quiz-title">Вікторина з програмування</h2>
             </div>
         </div>
     </div>
