commit before merge origin/artem

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -120,7 +120,20 @@
                             <a class="signup-a" href="/registration">Sign up</a>
                         </div>
                     </div>
-                {% elif page == 'new_quiz' and is_auth == True %}
+                {% elif page == 'new_quiz' and is_auth == True and is_admin == True %}
+                    <div class="urls">
+                        <div class="quiz-history-div">
+                            <a class="history-a text-decoration" href="/history">Quiz History</a>
+                        </div>
+                        <div class="new-quiz-div">
+                            <a class="new-quiz-a text-decoration" href="/new-quiz ">New Quiz</a>
+                        </div>
+                        <div class="account-a">
+                            <a class="username-a text-decoration" href="/profile">{{ name }}</a>
+                            <a class="log-out-a text-decoration" href="/log-out"><img class="log-out-img" src="{{ url_for('static', filename='img/log-out.png') }}"> Log out</a>
+                        </div>
+                    </div>
+                {% elif page == 'new_quiz' and is_auth == True and is_admin != True %}
                     <div class="urls">
                         <div class="quiz-history-div">
                             <a class="history-a text-decoration" href="/history">Quiz History</a>
