--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -31,11 +31,11 @@
         </div>
         <div class="choose-choose">
             <div>
-                <input type="radio" id="Student" name="Teacher" class="choose-btn" checked>
+                <input type="radio" id="Student" name="Teacher" value="0" class="choose-btn" checked>
                 <label for="Student" class="label"> Student</label>
             </div>
             <div>
-                <input type="radio" id="Teacher" name="Teacher" class="choose-btn">
+                <input type="radio" id="Teacher" name="Teacher" value="1" class="choose-btn">
                 <label for="Teacher" class="label"> Teacher</label>
             </div>
         </div>
